@@ -9,6 +9,7 @@ DIST Archive-Tar-1.80.tar.gz 56947 RMD160 c794e67e5cb9782a86ef42c2adb7146e3d3758
 DIST Archive-Tar-1.82.tar.gz 57557 RMD160 dee43f3d608e69f4c31f583661a112ac584159b2 SHA1 e4d5219329e66ea243dab17006604292fa24fb6a SHA256 24dc2737f568d41bed33c7b395eb716d3e482579b3a71211de586acd5f72157e
 DIST Archive-Tar-1.84.tar.gz 57899 RMD160 cb44b2b858f943b837a57303f60f545a64be6e4a SHA1 8f37a11949fc29fc61f6495722761bb2d5245643 SHA256 47ee8be1fb1bc45106611ac612b63ef45c010e10b3e2c54b54e8de433cd81fec
 DIST Archive-Tar-1.86.tar.gz 57989 RMD160 ae4e65dd38d6834c00d29abc40e26a5256ea5c5c SHA1 0d907c49886961e0fe7c869916466f05b5a283e2 SHA256 d64b31ac34d919ed54f162bbad3d0584c2e3514931c4d97dd4caceb2d4cbec95
+DIST Archive-Tar-1.88.tar.gz 58027 RMD160 4dcca2cbd4a093f8daf6a734119970669fbd9455 SHA1 877e36f89e6d71e7d64337df3c93a106a2a9ad55 SHA256 e3fd07464083e80cda218d51c52f3ed933f03df93b356434969fed713281129d
 EBUILD Archive-Tar-1.54.ebuild 771 RMD160 9d6320e30e3f3a91f4c7662c55fdb8c29a3ce532 SHA1 335d283f542596c7d155d6c855e7739a41860dec SHA256 8aa560294bbd06ffd3b42506c3fca9eef27cc95ed2a3804332108ad14d83c379
 EBUILD Archive-Tar-1.72.ebuild 788 RMD160 d0eceeeb82505d4f50e3b94d78eb8f18e5ceb579 SHA1 8b1f8c0af2051843486ccfe8c466099f43f69462 SHA256 67f8e730b576b4384a174d0c5d7ff89b29fa97a5892fc02a3b0f9c734a6390f8
 EBUILD Archive-Tar-1.760.0.ebuild 824 RMD160 ad6ac8514b0940eb0813451e9f72792d8893b68f SHA1 f0ca9b1cf20311da411229c71beee5ab3d65598d SHA256 4716486c99c278b12ebf01cc786d84c94acf1035350241d586ebf92961e0328e
@@ -17,12 +18,13 @@ EBUILD Archive-Tar-1.800.0.ebuild 824 RMD160 9d66410746bd42076d07c968dd1e5d3adea
 EBUILD Archive-Tar-1.820.0.ebuild 824 RMD160 47f4256a70cda133883778a6edda2d750eb533b8 SHA1 f3e1dc3771097ce7ada75e21fc2b9f24f35ca289 SHA256 ca64b9e9b0bd69e0ba547a840effa921d052f7890566780974c40b3c718524a3
 EBUILD Archive-Tar-1.840.0.ebuild 840 RMD160 ee9caf7570921aa91ae02bc59fc27c9d7d2fb3ed SHA1 7591c54e28b3c9b29a31e3f06717378af9e8275c SHA256 d23688a04a84a5eeefbe7b2c08964029a95379d44d692068aae8eba9d12c55b6
 EBUILD Archive-Tar-1.860.0.ebuild 836 RMD160 eee0a0a2695d0395268bc6b62034fca3a2d1b30f SHA1 eb0e276abe5cd793e1e310810052e2e7f74eed29 SHA256 a176b3be3f06513c0a9bc62984d66b3c13a157d12518a44d631e88fb31034c36
-MISC ChangeLog 18146 RMD160 113606816c8d7a750f86e5fe4fafd84d9c9da49e SHA1 4c1c0b96e3a6ec80202a4d2050dabef4f84d6fda SHA256 5ea409c1c8233c950f7273b17063bc18667b2c6a6ca065a27f46dfce927b7532
+EBUILD Archive-Tar-1.880.0.ebuild 836 RMD160 8debede999c2731d0503a8444b3d40eff4f91144 SHA1 74c3ef69daed02ad69a47a26be4acc67365f9f3f SHA256 0475c11d7a49f9901435410fd4a38f916effe1a2b41373d8e23a0296d71a3a6f
+MISC ChangeLog 18275 RMD160 79611d7e97bf867a58294652d5d818b31a749ac9 SHA1 70b2774fbfbad2ce227f6de39c5f7ac12cf362e9 SHA256 48abd3c0dee18b7f7353f43bdb112466331a599944555ef4108a25c035a9b51d
 MISC metadata.xml 237 RMD160 cc3bbe14c08d4dc50e7aeda6f8880906e0b843b3 SHA1 6aacc7790ca4cb5adf25b7b4a27686974b20f5cf SHA256 11b5be1c22aeca24aea69fd7c4501f8653fade3cccd82e6c8be040432582cbe2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk/A0xgACgkQV3J2n04Eauw9ywCdFR6Vv1lbaXdHleLYbPqknmXq
-WKMAn1K5GHlVKHoTTFm9g3R2iXnioYAC
-=wINL
+iEYEAREIAAYFAk/KXpcACgkQV3J2n04EauzZfgCeOXIQPXp+6dv01nW8BJ8J+gcy
+LbgAnR89YSG3wb4YwuhQvvpOKUzAwPCp
+=/8qL
 -----END PGP SIGNATURE-----
