@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST podlators-2.2.2.tar.gz 87685 RMD160 81a408ec6ccbcb2f8baf38828810a68ef46533fc SHA1 bb8bca28e822ece6f96cc0b10911e9f0bbbe074d SHA256 b90a80c55564170fe18ce76e44d4b2d68c13a68d7c3956d8e730a102dfea9ab6
 DIST podlators-2.3.0.tar.gz 92784 RMD160 d4c3b8269bfac5600dba02765aa41b9ddd88ffa9 SHA1 d24c1f847e11be035e89967e9115f5379a4152dd SHA256 f8c3532c72d06676f07bb999dd6952dc2ac8102bbdc4b64056895ba2750ad550
 DIST podlators-2.3.1.tar.gz 92874 RMD160 dd9a6e0634ac24ed7d8d323b92dc7ddd1ae8530e SHA1 1ad5cc2561c18cfd69fd33c24d9d3d502510ce67 SHA256 20238600f4aa4b4f88bb6ec436601fbf5de5d8094c4e24f11722c83d979b6ef0
 DIST podlators-2.4.0.tar.gz 94197 RMD160 6ef8fcf2a43e08b677d48ab0df0e6f8195db50a5 SHA1 d15cf939cca1e1862ef65af708ad82bec01e12e5 SHA256 b03e5ec91d766938f20c11e1cd80a33191526e778edc797442f1fedcb2a69407
+DIST podlators-2.4.2.tar.gz 96617 RMD160 efbffae88db857e70590084473046231c9e5f5ed SHA1 ac07fe8e9bb0efb5d7a8088c42d578b3b185cfe8 SHA256 0426a99af7336a42284827c206498fff1931059a1e14febc5665a45beef47a4e
 EBUILD podlators-2.2.2.ebuild 465 RMD160 78df7d61adf3a280f8fec41be47f7f5a23665db2 SHA1 3cac5de4546958d18af7c867866cfe4a01260798 SHA256 520bbb89704f97bcf1c756d29a1ba7cec761716949f72a73ac0781a031d14f66
 EBUILD podlators-2.3.0.ebuild 472 RMD160 e91b078237d0496f10dbc68d1cb3616c2b082d90 SHA1 2421991d3ffebeb84e5a237260b2c97977540150 SHA256 d3b038fcd2a4b5b171f2f4b6044e315782ff49a5bf31c10063d894fa5d639ab9
 EBUILD podlators-2.3.1.ebuild 472 RMD160 7e3838bc9f524c3ac87af3a6e61701c633da0339 SHA1 d56cc5307555d88c7aa28d43fffc28676b4ba160 SHA256 d3d2e99764850ccab4adce0e692a0b03925c6b3f5bbbe135f79375330be44841
 EBUILD podlators-2.4.0.ebuild 475 RMD160 849bf1d429e31f5a9e5e36a7aa3cb190ca0c47d1 SHA1 f1a7a6eb15168286b4ae6a07edefaa56902796c4 SHA256 803b63a7d75aa1ee4986ac872f0eb44032ad23c56dfe5524418cc20f861427cd
-MISC ChangeLog 864 RMD160 8d6e9cb9f6c96443e9062e5cd3b579d758fd898d SHA1 9e4f6fe873938eee600b41e24a4d39af51800b20 SHA256 9c18f51d92c6983e6330656d65516fd532af83b66bfc3835c69f8fd9058bab64
+EBUILD podlators-2.4.2.ebuild 493 RMD160 74484544a78aa1517f05a317704a6ad6cef490e5 SHA1 ae23269510a21f29bb160052e37210ae56ae1661 SHA256 5019e62add51467da1272194ef81b4467996f21a48352de6f40a467bf62f0d2a
+MISC ChangeLog 982 RMD160 a67b6bae0387943c54ca6e9b93506a07edc7b763 SHA1 3b914b8ff62d65b14a943f42dbd417dc85dc1e0e SHA256 b7b73634b2e529f0bdc300a6bc5a2af885bdee543b834d3ef4b8cd25ae0c6fe7
 MISC metadata.xml 235 RMD160 31ef52821b7b62457265640b027829fa44bb2340 SHA1 b2836f2e6016fb5675fc9e77bcb4058e57c3a728 SHA256 88f0ede4ccf3143e9e701409302d21a63f6055abdfb2b1a1db42de0cf456cbe3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAk/KXfQACgkQV3J2n04EauyaBgCgk1P1GQEMzTQ9GRCvYFLX3DcB
+oDgAn2zSuK5FskiB1jm49QLRPMfRB3NE
+=QSpG
+-----END PGP SIGNATURE-----
