@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/podlators
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/podlators/ChangeLog,v 1.5 2011/01/27 02:49:00 robbat2 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/podlators/ChangeLog,v 1.6 2012/06/02 18:39:42 tove Exp $
+
+*podlators-2.4.2 (02 Jun 2012)
+
+  02 Jun 2012; Torsten Veller <tove@gentoo.org> +podlators-2.4.2.ebuild:
+  Version bump
 
 *podlators-2.4.0 (27 Jan 2011)
 
